--- a/app/index.html
+++ b/app/index.html
@@ -17,24 +17,24 @@
 				<div id="logo">Геометрия<br>Дизайна</div>
 				<nav>
 					<a id="menu-portfolio">ПОРТФОЛИО</a>
-					<a id="menu-price">ЦЕНЫ</a>
+					<a id="menu-price">РАСЦЕНКИ</a>
 					<a id="menu-contact">КОНТАКТЫ</a>
 				</nav>
 				<div class="contact">8 921 979-34-25</div>
 			</div>
 			<div id="block-main-description">
 				<h1>Творческое объединение <span>дизайнеров интерьера</span><br> домов, квартир, общественных помещений.</h1>
-				<h3>Работаем в городе <span>Санкт-Петербург</span> и <span>Ленинградской области.</span></h3>
+				<h3>Работаем в <span>Санкт-Петербургe</span> и <span>Ленинградской области.</span></h3>
 			</div>
-			<img id="arrow" src="img/arrow.png">
+			<!-- <img id="arrow" src="img/arrow.png"> -->
 		</section>
 		<section id="block-portfolio">
-			<h1>ПОРТФОЛИО</h1>
+			<h2>ПОРТФОЛИО</h2>
 			<div>
-				<a id="oldGalleryButton" class="active">Новые работы</a>
-				<a id="newGalleryButton">Прошлые работы</a>
+				<a id="newGalleryButton" class="active">Новые работы</a>
+				<a id="oldGalleryButton">Прошлые работы</a>
 			</div>
-			<ul id="newGallery" class="popup-gallery owl-carousel ">
+			<ul id="newGallery" class="popup-gallery owl-carousel">
 				<li>
 					<a href="img/gallery/1.jpg"><img src="img/gallery/1.jpg"></a>
 					<a href="img/gallery/2.jpg"><img src="img/gallery/2.jpg"></a>
@@ -48,7 +48,7 @@
 					<a href="img/gallery/7.jpg"><img class="hidden" src="img/gallery/7.jpg"></a>
 					<a href="img/gallery/8.jpg"><img class="hidden" src="img/gallery/8.jpg"></a>
 				</li><li>
-					<a href="img/gallery/10.jpg"><img src="img/gallery/10.jpg"></a>
+					<a href="img/gallery/10.jpg"><img class="singleImg" src="img/gallery/10.jpg"></a>
 				</li><li>
 					<a href="img/gallery/9.jpg"><img class="hidden" src="img/gallery/9.jpg"></a>
 					<a href="img/gallery/11.jpg"><img class="hidden" src="img/gallery/11.jpg"></a>
@@ -83,26 +83,26 @@
 					<a href="img/gallery/30.jpg"><img class="hidden" src="img/gallery/30.jpg"></a>
 					<a href="img/gallery/31.jpg"><img class="hidden" src="img/gallery/31.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/32.jpg"><img class="hidden" src="img/gallery/32.jpg"></a>
+					<a href="img/gallery/32.jpg"><img class="singleImg" class="hidden" src="img/gallery/32.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/33.jpg"><img class="hidden" src="img/gallery/33.jpg"></a>
+					<a href="img/gallery/33.jpg"><img class="singleImg" class="hidden" src="img/gallery/33.jpg"></a>
 				</li><li>	
 					<a href="img/gallery/34.jpg"><img class="hidden" src="img/gallery/34.jpg"></a>
 					<a href="img/gallery/41.jpg"><img class="hidden" src="img/gallery/41.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/35.jpg"><img class="hidden" src="img/gallery/35.jpg"></a>
+					<a href="img/gallery/35.jpg"><img class="singleImg" class="hidden" src="img/gallery/35.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/36.jpg"><img class="hidden" src="img/gallery/36.jpg"></a>
+					<a href="img/gallery/36.jpg"><img class="singleImg" class="hidden" src="img/gallery/36.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/37.jpg"><img class="hidden" src="img/gallery/37.jpg"></a>
+					<a href="img/gallery/37.jpg"><img class="singleImg" class="hidden" src="img/gallery/37.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/38.jpg"><img class="hidden" src="img/gallery/38.jpg"></a>
+					<a href="img/gallery/38.jpg"><img class="singleImg" class="hidden" src="img/gallery/38.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/39.jpg"><img class="hidden" src="img/gallery/39.jpg"></a>
+					<a href="img/gallery/39.jpg"><img class="singleImg" class="hidden" src="img/gallery/39.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/40.jpg"><img class="hidden" src="img/gallery/40.jpg"></a>
+					<a href="img/gallery/40.jpg"><img class="singleImg" class="hidden" src="img/gallery/40.jpg"></a>
 				</li><li>
-					<a href="img/gallery/42.jpg"><img class="hidden" src="img/gallery/42.jpg"></a>
+					<a href="img/gallery/42.jpg"><img class="singleImg" class="hidden" src="img/gallery/42.jpg"></a>
 				</li>
 			</ul>
 			<ul id="oldGallery" class="hidden">
@@ -133,7 +133,7 @@
 			</ul>
 		</section>
 		<section id="block-price">
-			<h1>Наши расценки</h1>
+			<h2>расценки</h2>
 				<ul>
 					<li></li>
 					<li><h3 class="orange">1000 <span>р./кв.м.</span></h3></li>
@@ -180,10 +180,10 @@
 					<li class="space"></li>
 					<li></li>
 				</ul>			<ul>
-					<li><h3>Визуализация проекта <span>(одно помещение)</span></h3></li>
+					<li><h3>Визуализация проекта</h3></li>
 					<li></li>
 					<li class="space"></li>
-					<li><h3 class="blue">2500 р.</h3></li>
+					<li><h3 class="blue">250 <span>р./кв.м.</span></h3></li>
 				</ul>
 		</section>
 		<section id="block-order">
