--- a/app/index.html
+++ b/app/index.html
@@ -26,111 +26,109 @@
 				<h1>Творческое объединение <span>дизайнеров интерьера</span><br> домов, квартир, общественных помещений.</h1>
 				<h3>Работаем в <span>Санкт-Петербургe</span> и <span>Ленинградской области.</span></h3>
 			</div>
-			<!-- <img id="arrow" src="img/arrow.png"> -->
+			<!-- <img alt="img" id="arrow" src="img/arrow.png"> -->
 		</section>
 		<section id="block-portfolio">
 			<h2>ПОРТФОЛИО</h2>
-			<div>
+<!-- 			<div>
 				<a id="newGalleryButton" class="active">Новые работы</a>
 				<a id="oldGalleryButton">Прошлые работы</a>
-			</div>
-			<ul id="newGallery" class="popup-gallery owl-carousel">
+			</div> -->
+			<ul id="newGallery" class="popup-gallery owl-carousel ">
 				<li>
-					<a href="img/gallery/1.jpg"><img src="img/gallery/1.jpg"></a>
-					<a href="img/gallery/2.jpg"><img src="img/gallery/2.jpg"></a>
+					<a href="img/gallery/1.jpg"><img alt="img" src="img/gallery/1.jpg"></a>
+					<a href="img/gallery/2.jpg"><img alt="img" src="img/gallery/2.jpg"></a>
 				</li><li>
-					<a href="img/gallery/3.jpg"><img class="hidden" src="img/gallery/3.jpg"></a>
-					<a href="img/gallery/4.jpg"><img class="hidden" src="img/gallery/4.jpg"></a>
+					<a href="img/gallery/3.jpg"><img alt="img" src="img/gallery/3.jpg"></a>
+					<a href="img/gallery/4.jpg"><img alt="img" src="img/gallery/4.jpg"></a>
 				</li><li>
-					<a href="img/gallery/5.jpg"><img class="hidden" src="img/gallery/5.jpg"></a>
-					<a href="img/gallery/6.jpg"><img class="hidden" src="img/gallery/6.jpg"></a>
+					<a href="img/gallery/5.jpg"><img alt="img" src="img/gallery/5.jpg"></a>
+					<a href="img/gallery/6.jpg"><img alt="img" src="img/gallery/6.jpg"></a>
 				</li><li>
-					<a href="img/gallery/7.jpg"><img class="hidden" src="img/gallery/7.jpg"></a>
-					<a href="img/gallery/8.jpg"><img class="hidden" src="img/gallery/8.jpg"></a>
+					<a href="img/gallery/7.jpg"><img alt="img" src="img/gallery/7.jpg"></a>
+					<a href="img/gallery/8.jpg"><img alt="img" src="img/gallery/8.jpg"></a>
 				</li><li>
-					<a href="img/gallery/10.jpg"><img class="singleImg" src="img/gallery/10.jpg"></a>
+					<a href="img/gallery/10.jpg"><img alt="img" class="singleImg" src="img/gallery/10.jpg"></a>
 				</li><li>
-					<a href="img/gallery/9.jpg"><img class="hidden" src="img/gallery/9.jpg"></a>
-					<a href="img/gallery/11.jpg"><img class="hidden" src="img/gallery/11.jpg"></a>
+					<a href="img/gallery/9.jpg"><img alt="img" src="img/gallery/9.jpg"></a>
+					<a href="img/gallery/11.jpg"><img alt="img" src="img/gallery/11.jpg"></a>
 				</li><li>
-					<a href="img/gallery/12.jpg"><img class="hidden" src="img/gallery/12.jpg"></a>
-					<a href="img/gallery/13.jpg"><img class="hidden" src="img/gallery/13.jpg"></a>
+					<a href="img/gallery/12.jpg"><img alt="img" src="img/gallery/12.jpg"></a>
+					<a href="img/gallery/13.jpg"><img alt="img" src="img/gallery/13.jpg"></a>
 				</li><li>
-					<a href="img/gallery/14.jpg"><img class="hidden" src="img/gallery/14.jpg"></a>
-					<a href="img/gallery/15.jpg"><img class="hidden" src="img/gallery/15.jpg"></a>
+					<a href="img/gallery/14.jpg"><img alt="img" src="img/gallery/14.jpg"></a>
+					<a href="img/gallery/15.jpg"><img alt="img" src="img/gallery/15.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/16.jpg"><img class="hidden" src="img/gallery/16.jpg"></a>
-					<a href="img/gallery/17.jpg"><img class="hidden" src="img/gallery/17.jpg"></a>
+					<a href="img/gallery/16.jpg"><img alt="img" src="img/gallery/16.jpg"></a>
+					<a href="img/gallery/17.jpg"><img alt="img" src="img/gallery/17.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/18.jpg"><img class="hidden" src="img/gallery/18.jpg"></a>
-					<a href="img/gallery/19.jpg"><img class="hidden" src="img/gallery/19.jpg"></a>
+					<a href="img/gallery/18.jpg"><img alt="img" src="img/gallery/18.jpg"></a>
+					<a href="img/gallery/19.jpg"><img alt="img" src="img/gallery/19.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/20.jpg"><img class="hidden" src="img/gallery/20.jpg"></a>
-					<a href="img/gallery/21.jpg"><img class="hidden" src="img/gallery/21.jpg"></a>
+					<a href="img/gallery/20.jpg"><img alt="img" src="img/gallery/20.jpg"></a>
+					<a href="img/gallery/21.jpg"><img alt="img" src="img/gallery/21.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/22.jpg"><img class="hidden" src="img/gallery/22.jpg"></a>
-					<a href="img/gallery/23.jpg"><img class="hidden" src="img/gallery/23.jpg"></a>
+					<a href="img/gallery/22.jpg"><img alt="img" src="img/gallery/22.jpg"></a>
+					<a href="img/gallery/23.jpg"><img alt="img" src="img/gallery/23.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/24.jpg"><img class="hidden" src="img/gallery/24.jpg"></a>
-					<a href="img/gallery/25.jpg"><img class="hidden" src="img/gallery/25.jpg"></a>
+					<a href="img/gallery/24.jpg"><img alt="img" src="img/gallery/24.jpg"></a>
+					<a href="img/gallery/25.jpg"><img alt="img" src="img/gallery/25.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/26.jpg"><img class="hidden" src="img/gallery/26.jpg"></a>
-					<a href="img/gallery/27.jpg"><img class="hidden" src="img/gallery/27.jpg"></a>
+					<a href="img/gallery/26.jpg"><img alt="img" src="img/gallery/26.jpg"></a>
+					<a href="img/gallery/27.jpg"><img alt="img" src="img/gallery/27.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/28.jpg"><img class="hidden" src="img/gallery/28.jpg"></a>
-					<a href="img/gallery/29.jpg"><img class="hidden" src="img/gallery/29.jpg"></a>
+					<a href="img/gallery/28.jpg"><img alt="img" src="img/gallery/28.jpg"></a>
+					<a href="img/gallery/29.jpg"><img alt="img" src="img/gallery/29.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/30.jpg"><img class="hidden" src="img/gallery/30.jpg"></a>
-					<a href="img/gallery/31.jpg"><img class="hidden" src="img/gallery/31.jpg"></a>
+					<a href="img/gallery/30.jpg"><img alt="img" src="img/gallery/30.jpg"></a>
+					<a href="img/gallery/31.jpg"><img alt="img" src="img/gallery/31.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/32.jpg"><img class="singleImg" class="hidden" src="img/gallery/32.jpg"></a>
+					<a href="img/gallery/32.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/32.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/33.jpg"><img class="singleImg" class="hidden" src="img/gallery/33.jpg"></a>
+					<a href="img/gallery/33.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/33.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/34.jpg"><img class="hidden" src="img/gallery/34.jpg"></a>
-					<a href="img/gallery/41.jpg"><img class="hidden" src="img/gallery/41.jpg"></a>
+					<a href="img/gallery/34.jpg"><img alt="img" src="img/gallery/34.jpg"></a>
+					<a href="img/gallery/41.jpg"><img alt="img" src="img/gallery/41.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/35.jpg"><img class="singleImg" class="hidden" src="img/gallery/35.jpg"></a>
+					<a href="img/gallery/35.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/35.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/36.jpg"><img class="singleImg" class="hidden" src="img/gallery/36.jpg"></a>
+					<a href="img/gallery/36.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/36.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/37.jpg"><img class="singleImg" class="hidden" src="img/gallery/37.jpg"></a>
+					<a href="img/gallery/37.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/37.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/38.jpg"><img class="singleImg" class="hidden" src="img/gallery/38.jpg"></a>
+					<a href="img/gallery/38.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/38.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/39.jpg"><img class="singleImg" class="hidden" src="img/gallery/39.jpg"></a>
+					<a href="img/gallery/39.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/39.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/40.jpg"><img class="singleImg" class="hidden" src="img/gallery/40.jpg"></a>
+					<a href="img/gallery/40.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/40.jpg"></a>
 				</li><li>
-					<a href="img/gallery/42.jpg"><img class="singleImg" class="hidden" src="img/gallery/42.jpg"></a>
+					<a href="img/gallery/42.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/42.jpg"></a>
 				</li>
 			</ul>
-			<ul id="oldGallery" class="hidden">
+<!-- 			<ul id="oldGallery" class="popup-gallery owl-carousel hidden">
 				<li>
-					<a href="img/gallery/43.jpg"><img class="hidden" src="img/gallery/43.jpg"></a>
+					<a href="img/gallery/52.jpg"><img alt="img" src="img/gallery/52.jpg"></a>
 				</li><li>
-					<a href="img/gallery/44.jpg"><img class="hidden" src="img/gallery/44.jpg"></a>
-					<a href="img/gallery/45.jpg"><img class="hidden" src="img/gallery/45.jpg"></a>
+					<a href="img/gallery/43.jpg"><img alt="img" src="img/gallery/43.jpg"></a>
+					<a href="img/gallery/44.jpg"><img alt="img" src="img/gallery/44.jpg"></a>
 				</li><li>
-					<a href="img/gallery/46.jpg"><img class="hidden" src="img/gallery/46.jpg"></a>
-					<a href="img/gallery/47.jpg"><img class="hidden" src="img/gallery/47.jpg"></a>
+					<a href="img/gallery/46.jpg"><img alt="img" src="img/gallery/46.jpg"></a>
+					<a href="img/gallery/47.jpg"><img alt="img" src="img/gallery/47.jpg"></a>
 				</li><li>
-					<a href="img/gallery/48.jpg"><img class="hidden" src="img/gallery/48.jpg"></a>
-					<a href="img/gallery/49.jpg"><img class="hidden" src="img/gallery/49.jpg"></a>
+					<a href="img/gallery/48.jpg"><img alt="img" src="img/gallery/48.jpg"></a>
+					<a href="img/gallery/49.jpg"><img alt="img" src="img/gallery/49.jpg"></a>
 				</li><li>
-					<a href="img/gallery/50.jpg"><img class="hidden" src="img/gallery/50.jpg"></a>
-					<a href="img/gallery/51.jpg"><img class="hidden" src="img/gallery/51.jpg"></a>
+					<a href="img/gallery/50.jpg"><img alt="img" src="img/gallery/50.jpg"></a>
+					<a href="img/gallery/51.jpg"><img alt="img" src="img/gallery/51.jpg"></a>
 				</li><li>
-					<a href="img/gallery/52.jpg"><img class="hidden" src="img/gallery/52.jpg"></a>
+					<a href="img/gallery/53.jpg"><img alt="img" src="img/gallery/53.jpg"></a>
 				</li><li>
-					<a href="img/gallery/53.jpg"><img class="hidden" src="img/gallery/53.jpg"></a>
+					<a href="img/gallery/45.jpg"><img alt="img" src="img/gallery/45.jpg"></a>
+					<a href="img/gallery/56.jpg"><img alt="img" src="img/gallery/56.jpg"></a>
 				</li><li>
-					<a href="img/gallery/54.jpg"><img class="hidden" src="img/gallery/54.jpg"></a>
-					<a href="img/gallery/56.jpg"><img class="hidden" src="img/gallery/56.jpg"></a>
-				</li><li>
-					<a href="img/gallery/55.jpg"><img class="hidden" src="img/gallery/55.jpg"></a>
+					<a href="img/gallery/55.jpg"><img alt="img" src="img/gallery/55.jpg"></a>
 				</li>
-			</ul>
+			</ul> -->
 		</section>
 		<section id="block-price">
 			<h2>расценки</h2>
@@ -141,39 +139,39 @@
 					<li><h3 class="green">1500 <span>р./кв.м.</span></h3></li>
 				</ul>			<ul>
 					<li>Обмерный план</li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>План демонтажа и монтажа </li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>План расстановки мебели и внутреннего оборудования с габаритами и размерами</li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>План по электрике относительно расстановки мебели </li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>План полов и потолков</li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>Развертка стен </li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li>Ведение объекта (авторский надзор)</li>
 					<li></li>
 					<li class="space"></li>
-					<li><img src="img/tick.png"></li>
+					<li><img alt="img" src="img/tick.png"></li>
 				</ul>			<ul>
 					<li></li>
 					<li></li>
@@ -187,10 +185,10 @@
 				</ul>
 		</section>
 		<section id="block-order">
-			<form name="order" action="" method="post">
+			<form name="order" action="sendmail.php" method="post">
 				<h1>У вас есть вопросы?</h1>				
 				<p>Оставьте заявку и мы с Вами свяжемся</p>
-				<input type="text" name="name" size="40" placeholder="Ваше имя" required>
+				<input type="text" name="name" size="40" placeholder="Ваше имя">
 				<input type="phone" name="phone" size="40" placeholder="Телефон">
 				<input type="email" name="email" size="40" placeholder="Электронная почта">
 				<input id="submit" type="submit" name="send" value="Отправить заявку">
