--- a/app/index.html
+++ b/app/index.html
@@ -83,29 +83,29 @@
 					<a href="img/gallery/30.jpg"><img alt="img" src="img/gallery/30.jpg"></a>
 					<a href="img/gallery/31.jpg"><img alt="img" src="img/gallery/31.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/32.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/32.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/33.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/33.jpg"></a>
-				</li><li>	
+					<a href="img/gallery/32.jpg"><img alt="img" class="singleImg" src="img/gallery/32.jpg"></a>
+				</li><li><!-- 
+					<a href="img/gallery/33.jpg"><img alt="img" class="singleImg" src="img/gallery/33.jpg"></a>
+				</li><li>
 					<a href="img/gallery/34.jpg"><img alt="img" src="img/gallery/34.jpg"></a>
 					<a href="img/gallery/41.jpg"><img alt="img" src="img/gallery/41.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/35.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/35.jpg"></a>
+					<a href="img/gallery/35.jpg"><img alt="img" class="singleImg" src="img/gallery/35.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/36.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/36.jpg"></a>
+					<a href="img/gallery/36.jpg"><img alt="img" class="singleImg" src="img/gallery/36.jpg"></a>
+				</li><li>	 -->
+					<a href="img/gallery/37.jpg"><img alt="img" class="singleImg" src="img/gallery/37.jpg"></a><!-- 
 				</li><li>	
-					<a href="img/gallery/37.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/37.jpg"></a>
+					<a href="img/gallery/38.jpg"><img alt="img" class="singleImg" src="img/gallery/38.jpg"></a>
 				</li><li>	
-					<a href="img/gallery/38.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/38.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/39.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/39.jpg"></a>
-				</li><li>	
-					<a href="img/gallery/40.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/40.jpg"></a>
+					<a href="img/gallery/39.jpg"><img alt="img" class="singleImg" src="img/gallery/39.jpg"></a> -->
+<!-- 				</li><li>	
+					<a href="img/gallery/40.jpg"><img alt="img" class="singleImg" src="img/gallery/40.jpg"></a>
 				</li><li>
-					<a href="img/gallery/42.jpg"><img alt="img" class="singleImg" class="hidden" src="img/gallery/42.jpg"></a>
+					<a href="img/gallery/42.jpg"><img alt="img" class="singleImg" src="img/gallery/42.jpg"></a> -->
 				</li>
-			</ul>
-<!-- 			<ul id="oldGallery" class="popup-gallery owl-carousel hidden">
+			<!-- </ul>
+			<ul id="oldGallery" class="popup-gallery owl-carousel hidden">
 				<li>
 					<a href="img/gallery/52.jpg"><img alt="img" src="img/gallery/52.jpg"></a>
 				</li><li>
