--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,9 @@
 <html lang="ru">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Геометрия дизайна</title>
+	<meta name="viewport" content="width=1600, initial-scale=1, user-scalable=no" />
+	<meta description="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
+	<title> Геометрия дизайна </title>
 	<link rel="stylesheet" href="css/libs.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<script src="js/libs.min.js"></script>
