--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,16 @@
 <html lang="ru">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=1600, initial-scale=1, user-scalable=no" />
-	<meta description="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
-	<title> Геометрия дизайна </title>
-	<link rel="stylesheet" href="css/libs.css" />
-	<link rel="stylesheet" href="css/main.css" />
+	<meta name="viewport" content="width=1600, initial-scale=1">
+	<meta name="description" content="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
+	<meta name="keywords" content="дизайн помещений, дизайн интерьера, интерьер домов, дизайн квартир, дизайн комнат, дизайн офисов">
+	<meta name="robots" content="index, follow">
+	<meta name="author" content="Andrey Strebkov">
+	<title> Геометрия дизайна - Творческое объединение дизайнеров интерьера </title>
+	<link rel="stylesheet" href="css/libs.css">
+	<link rel="stylesheet" href="css/main.css">
 	<script src="js/libs.min.js"></script>
 	<script src="js/main.js"></script>
-	<!-- Code by Andrey Strebkov -->
 </head>
 <body>
 	<div id="container">
