--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=1600, initial-scale=1">
 	<meta name="description" content="Творческое объединение дизайнеров интерьера домов, квартир, общественных помещений">
-	<meta name="keywords" content="дизайн помещений, дизайн интерьера, интерьер домов, дизайн квартир, дизайн комнат, дизайн офисов">
+	<meta name="keywords" content="Дизайнер интерьера, частный дизайнер, персональный дизайнер, дизайнер не дорого, Дизайнер в Спб">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Andrey Strebkov">
 	<title> Геометрия дизайна - Творческое объединение дизайнеров интерьера </title>
@@ -130,8 +130,8 @@
 					<a href="img/gallery/56.jpg"><img alt="img" src="img/gallery/56.jpg"></a>
 				</li><li>
 					<a href="img/gallery/55.jpg"><img alt="img" src="img/gallery/55.jpg"></a>
-				</li>
-			</ul> -->
+				</li>-->
+			</ul> 
 		</section>
 		<section id="block-price">
 			<h2>расценки</h2>
@@ -192,15 +192,15 @@
 				<h1>У вас есть вопросы?</h1>				
 				<p>Оставьте заявку и мы с Вами свяжемся</p>
 				<input type="text" name="name" size="40" placeholder="Ваше имя">
-				<input type="phone" name="phone" size="40" placeholder="Телефон">
+				<input type="tel" name="phone" size="40" placeholder="Телефон">
 				<input type="email" name="email" size="40" placeholder="Электронная почта">
 				<input id="submit" type="submit" name="send" value="Отправить заявку">
 			</form>
 		</section>
-		<section id="block-contact">
+		<footer>
 			<div class="contact">8 921 979-34-25</div>
 			<div id="email">geometriadizaina@mail.ru</div>
 			<p>2018 «Геометрия Дизайна». Все права защищены.</p>
-		</section>
+		</footer>
 	</div>
 </body>
