--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
 				</ul>
 		</section>
 		<section id="block-order">
-			<form name="order" action="sendmail.php" method="post">
+			<form name="order">
 				<h1>У вас есть вопросы?</h1>				
 				<p>Оставьте заявку и мы с Вами свяжемся</p>
 				<input type="text" name="name" size="40" placeholder="Ваше имя">
