--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,16 @@
 	<div id="container">
 		<section id="block-main">
 			<div id="block-main-top">
-				<div id="logo">Геометрия<br>Дизайна</div>
+				<div id="logo">
+					<img src="img/logo.png" alt="logo">
+					Геометрия<br>Дизайна
+				</div>
 				<nav>
-					<a id="menu-portfolio">ПОРТФОЛИО</a>
-					<a id="menu-price">РАСЦЕНКИ</a>
-					<a id="menu-contact">КОНТАКТЫ</a>
+					<ul>
+					<li><a id="menu-portfolio">ПОРТФОЛИО</a></li>
+					<li><a id="menu-price">РАСЦЕНКИ</a></li>
+					<li><a id="menu-contact">КОНТАКТЫ</a></li>
+					</ul>
 				</nav>
 				<div class="contact">8 921 979-34-25</div>
 			</div>
