--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 	          <li><a id="menu-contact">КОНТАКТЫ</a></li>
           </ul>
         </nav>
-        <div class="contact">8 921 979-34-25</div>
+        <div class="contact contact-menu">8 921 979-34-25</div>
       </div>
       <div id="block-main-description">
         <h1>Творческое объединение <span>дизайнеров интерьера</span><br> домов, квартир, общественных помещений.</h1>
